k8s/apps/base/arr-stack/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: arr-stack
  namespace: homelab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: arr-stack
  template:
    metadata:
      labels:
        app: arr-stack
    spec:
      containers:
        - name: sabnzbd
          image: ghcr.io/hotio/sabnzbd@sha256:b4c45fd872911f111d7b9d4cc8a395f0e2c463603b7cfdfaa8dd89296408a5c6
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: sabnzbd-config
              mountPath: /config
            - name: data
              mountPath: /data
        - name: recyclarr
          image: ghcr.io/recyclarr/recyclarr:7.4
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
          volumeMounts:
            - name: recyclarr-config
              mountPath: /config
      volumes:
        - name: data
          nfs:
            server: 'nas.home.arpa'
            path: "/srv/nfs4/data"
        - name: recyclarr-config
          nfs:
            server: "nas2.home.arpa"
            path: "/config/recyclarr"
        - name: sabnzbd-config
          nfs:
            server: "nas2.home.arpa"
            path: "/config/sabnzbd"
