k8s/apps/base/arr-stack/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-ingress
  namespace: homelab
spec:
  ingressClassName: nginx
  rules:
    - host: "jellyfin.${DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: arr-stack
                port:
                  name: jellyfin
  tls:
    - secretName: homelab
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr-ingress
  namespace: homelab
spec:
  ingressClassName: nginx
  rules:
    - host: "radarr.${DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: arr-stack
                port:
                  name: radarr
  tls:
    - secretName: homelab
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr-ingress
  namespace: homelab
spec:
  ingressClassName: nginx
  rules:
    - host: "sonarr.${DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: arr-stack
                port:
                  name: sonarr
  tls:
    - secretName: homelab
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr-ingress
  namespace: homelab
spec:
  ingressClassName: nginx
  rules:
    - host: "prowlarr.${DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: arr-stack
                port:
                  name: prowlarr
  tls:
    - secretName: homelab
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd-ingress
  namespace: homelab
spec:
  ingressClassName: nginx
  rules:
    - host: "sabnzbd.${DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: arr-stack
                port:
                  name: sabnzbd
  tls:
    - secretName: homelab
